--- a/CSS/style.css
+++ b/CSS/style.css
@@ -318,11 +318,9 @@ body {
 /* Fim do Estilo da Tela de Detalhes do Produto -----------------------------------------*/
 
 
-
-
-
-/* Inicio do Estilo da Tela de Carrinho -----------------------------------------*/
-
+/* ============================================================
+ESTILO - PÁGINA DE CARRINHO JR ESPETOS
+============================================================ */
 /* Navbar vinho */
 .bg-custom {
   background-color: #701C22;
@@ -339,23 +337,25 @@ body {
   border-radius: 6px;
 }
 
-/* Botões personalizados */
-.btn-danger {
-  background-color: #701C22;
+/* Botões de ação (remover selecionados e finalizar compra) */
+.botao-acao {
+  padding: 0.3rem 0.8rem;
+  font-size: 0.85rem;
+  min-width: 120px;
+  height: 40px;
+}
+
+/* Botões Editar e Remover individuais */
+.btn-outline-danger, .btn-outline-primary {
+  font-size: 0.8rem;
+  padding: 0.2rem 0.5rem;
+}
+
+/* Espaço em branco para novos produtos */
+.placeholder-item {
+  height: 350px;
+  background-color: transparent;
   border: none;
-}
-
-.btn-danger:hover {
-  background-color: #8c2a31;
-}
-
-.btn-success {
-  background-color: #2e7d32;
-  border: none;
-}
-
-.btn-success:hover {
-  background-color: #1b5e20;
 }
 
 /* Responsividade */
